rest template, client 학습 테스트